# bigbanger

./: .gitmodules  README.md
firmware/rust/: Cargo.toml
firmware/rust/.cargo/: config.toml
firmware/rust/src/: calibration_mem.rs  datapoint.rs  main.rs  utils.rs
firmware/rust/src/ble/: gatt.rs  mod.rs  run.rs
firmware/rust/src/measurement/: mod.rs  task.rs
firmware/upython/: .gitignore  ads1231_bb.py  bb_gatt_server.py  ble_advertising.py  config.py  font.py  hx711_bb.py  main.py  platformio.ini  utils.py
firmware/upython/src/: main.cpp
